# cpgen

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  format.sh
apps/cpgen/: CMakeLists.txt  main.cpp  project_manager.h
cmake/: CMakeUtils.cmake  CompileCommands.cmake  CompilerOptions.cmake  Conan.cmake
include/cli_interface/cpgen/: cli_interface.h
include/common/cpgen/: common.h
include/template_manager/cpgen/: template_manager.h
share/templates/executable/apps/__component_name__/: CMakeLists.txt
share/templates/project/: CMakeLists.txt  README.md  __project_name__.txt  conanfile.py
share/templates/project/cmake/: Conan.cmake  Coverage.cmake  Doxygen.cmake  StaticAnalyzers.cmake
share/templates/project/docs/: Doxyfile.in
share/templates/project/test_package/: .gitignore  CMakeLists.txt  example.cpp
share/templates/project/tests/: CMakeLists.txt
share/templates/test/tests/__component_name__/: CMakeLists.txt
src/cli_interface/: CMakeLists.txt  cli_interface.cpp  cli_interface_impl.cpp  cli_interface_impl.h
src/common/: CMakeLists.txt
src/template_manager/: CMakeLists.txt  template_manager.cpp  template_manager_impl.cpp  template_manager_impl.h
test_package/: conanfile.py  example.cpp
